--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,23 +1,28 @@
-@import 'node_modules/normalize.css/normalize';
+@import "node_modules/normalize.css/normalize";
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: white;
-    color: white;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 300;
-    height: 100vh;
     overflow: hidden;
+
+    height: 100vh;
     padding: 20px;
+
+    color: white;
+    background-color: white;
+
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: .9em;
+    font-weight: 300;
 }
 
 // Links
 a {
-    color: white;
     text-decoration: none;
+
+    color: white;
 
     &:hover {
         text-decoration: underline;
@@ -27,36 +32,51 @@ a {
 // Headings
 h1, h2 {
     margin-top: 0;
-    font-weight: 300;
-}
 
-// Text
-p {
-    font-size: .9em;
+    font-weight: 300;
 }
 
 // Styles
 .pao-wrapper {
     height: 100%;
-    padding: 50px;
-    background-image: url('../img/background.png');
-	background-repeat: no-repeat;
+
+    background-image: url("../img/background.png");
+    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
 .pao-content {
-    margin-left: percentage(1/5);
     width: percentage(2/5);
+    margin-left: percentage(1/5);
+    padding-top: 140px;
+
+    @media screen and (max-width: 600px) {
+        width: 100%;
+        margin: 0;
+        padding: 50px;
+    }
+
+    .pao-section {
+        margin-bottom: 50px;
+    }
+}
+
+.pao-description {
+    @media screen and (max-height: 600px) {
+        display: none;
+    }
 }
 
 .pao-links {
     a {
-        opacity: .5;
         transition: opacity 200ms;
+
+        opacity: .5;
 
         &:hover {
             text-decoration: none;
+
             opacity: 1;
         }
     }
