--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ img,legend{border:0}
 legend,td,th{padding:0}
 body,h1,h2{font-weight:300}
 html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
-body{margin:0;background-color:#fff;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;height:100vh;padding:20px;font-size:.9em}
+body{margin:0;height:100vh;padding:20px;background-color:#fff;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:.9em}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
 audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
 audio:not([controls]){display:none;height:0}
@@ -42,12 +42,12 @@ table{border-collapse:collapse;border-spacing:0}
 a:hover{text-decoration:underline}
 h1,h2{margin-top:0}
 .pao-wrapper{height:100%;background-image:url(../img/background.png);background-repeat:no-repeat;background-position:center;background-size:cover}
-.pao-content{padding-top:140px;margin-left:20%;width:40%}
-@media screen and (max-width:600px){.pao-content{margin:0;width:100%;padding:50px}
+.pao-content{width:40%;margin-left:20%;padding-top:140px}
+@media screen and (max-width:600px){.pao-content{width:100%;margin:0;padding:50px}
 }
 .pao-content .pao-section{margin-bottom:50px}
 @media screen and (max-height:600px){.pao-description{display:none}
 }
-.pao-links a{opacity:.5;-webkit-transition:opacity 200ms;transition:opacity 200ms}
+.pao-links a{-webkit-transition:opacity 200ms;transition:opacity 200ms;opacity:.5}
 .pao-links a:hover{text-decoration:none;opacity:1}
 .pao-links img{width:40px}
