--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,6 +51,8 @@ h1, h2 {
     margin-left: percentage(1/5);
     padding-top: 140px;
 
+    $animation-duration: .5s;
+
     @media screen and (max-width: 600px) {
         width: 100%;
         margin: 0;
@@ -59,6 +61,26 @@ h1, h2 {
 
     .pao-section {
         margin-bottom: 50px;
+    }
+
+    h1, h2, .fadein {
+        animation-duration: $animation-duration;
+
+        animation-fill-mode: both;
+    }
+
+    h1, h2 {
+        animation-name: fadein-drop;
+        animation-timing-function: ease-out;
+    }
+
+    h2 {
+        animation-delay: $animation-duration;
+    }
+
+    .fadein {
+        animation-name: fadein;
+        animation-delay: 2 * $animation-duration;
     }
 }
 
@@ -83,5 +105,30 @@ h1, h2 {
 
     img {
         width: 40px;
+    }
+}
+
+// Animation
+@keyframes fadein-drop {
+    0% {
+        transform: translateY(-100%);
+
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+
+        opacity: 1;
+    }
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
