--- a/sass/style.scss
+++ b/sass/style.scss
@@ -100,6 +100,10 @@ h1, h2 {
             text-decoration: none;
 
             opacity: 1;
+
+            img {
+                animation: heartbeat 2s infinite;
+            }
         }
     }
 
@@ -130,5 +134,27 @@ h1, h2 {
 
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes heartbeat {
+    0% {
+        transform: scale3d(1, 1, 1);
+    }
+
+    20% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+
+    40% {
+        transform: scale3d(1, 1, 1);
+    }
+
+    60% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+
+    80% {
+        transform: scale3d(1, 1, 1);
     }
 }
