fix: heartbeat only on heart

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,7 +101,7 @@ h1, h2 {
 
             opacity: 1;
 
-            img {
+            .heartbeat {
                 animation: heartbeat 2s infinite;
             }
         }
