--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h1,h2{margin-top:0}
 }
 .pao-links a{-webkit-transition:opacity 200ms;transition:opacity 200ms;opacity:.5}
 .pao-links a:hover{text-decoration:none;opacity:1}
-.pao-links a:hover img{-webkit-animation:heartbeat 2s infinite;animation:heartbeat 2s infinite}
+.pao-links a:hover .heartbeat{-webkit-animation:heartbeat 2s infinite;animation:heartbeat 2s infinite}
 .pao-links img{width:40px}
 @-webkit-keyframes fadein-drop{0%{-webkit-transform:translateY(-100%);transform:translateY(-100%);opacity:0}
 100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}
