--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,7 +42,7 @@ h1, h2 {
 
     background-image: url("../img/background.png");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom right;
     background-size: cover;
 }
 
