--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-h1{color:#FFF;;font-weight:600}
+h1{color:#FFF;line-height: 1.8em}
 h2{color:##8d8d8d;font-size: 18px}
 body{color: #FFF;font-size: 18px}
 a{color:#FFF}
@@ -7,7 +7,8 @@ body,svg:not(:root){overflow:hidden}
 img,legend{border:0}
 legend,td,th{padding:0}
 html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
-body{margin:0;height:100vh;padding:20px;background-color:#eceff1;font-family:"lato",lato;font-size:.9em}
+body{margin:0;height:100vh;padding:20px;background-color:#eceff1;font-family:helvetica;letter-spacing:1px;
+	;font-size:1em;line-height:1.5em}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
 audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
 audio:not([controls]){display:none;height:0}
