--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-h1{color:#FFF;line-height: 1.8em}
-h2{color:##8d8d8d;font-size: 18px}
-body{color: #FFF;font-size: 18px}
+h1{color:#FFF;line-height: 2.8em}
+h2{color:##8d8d8d;font-size: 20px}
+body{color: #FFF}
 a{color:#FFF}
 body,svg:not(:root){overflow:hidden}
 img,legend{border:0}
 legend,td,th{padding:0}
 html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
-body{margin:0;height:100vh;padding:20px;background-color:#eceff1;font-family:helvetica;letter-spacing:1px;
-	;font-size:1em;line-height:1.5em}
+body{margin:0;height:100vh;padding:20px;background-color:#eceff1;font-family:helvetica;letter-spacing:1px;font-size:1em;line-height:1.5em}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
 audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
 audio:not([controls]){display:none;height:0}
@@ -18,7 +17,6 @@ a:active,a:hover{outline:0}
 abbr[title]{border-bottom:1px dotted}
 b,optgroup,strong{font-weight:700}
 dfn{font-style:italic}
-h1{font-size:2em;margin:.67em 0}
 mark{background:#ff0;color:#000}
 small{font-size:80%}
 sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
@@ -55,26 +53,3 @@ h1,h2{margin-top:0}
 .pao-content .fadein{-webkit-animation-name:fadein;animation-name:fadein;-webkit-animation-delay:0.5s;animation-delay:0.5s}
 @media screen and (max-height:600px){.pao-description{display:none}
 }
-.pao-links a{-webkit-transition:opacity 200ms;transition:opacity 200ms;opacity:.5}
-.pao-links a:hover{text-decoration:none;opacity:1}
-.pao-links a:hover .heartbeat{-webkit-animation:heartbeat 1s infinite;animation:heartbeat 1s infinite}
-.pao-links img{width:40px}
-@-webkit-keyframes fadein-drop{0%{-webkit-transform:translateY(-100%);transform:translateY(-100%);opacity:0}
-100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}
-}
-@keyframes fadein-drop{0%{-webkit-transform:translateY(-100%);transform:translateY(-100%);opacity:0}
-100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}
-}
-@-webkit-keyframes fadein{0%{opacity:0}
-100%{opacity:1}
-}
-@keyframes fadein{0%{opacity:0}
-100%{opacity:1}
-}
-@-webkit-keyframes heartbeat{0%{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}
-20%,60%{-webkit-transform:scale3d(1.1,1.1,1.1);transform:scale3d(1.1,1.1,1.1)}
-}
-@keyframes heartbeat{0%{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}
-20%,60%{-webkit-transform:scale3d(1.1,1.1,1.1);transform:scale3d(1.1,1.1,1.1)}
-}
-
