--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-h1{color:#FFF;line-height: 2.8em}
+h1{color:#FFF;line-height: 1.6em}
 h2{color:##8d8d8d;font-size: 20px}
 body{color: #FFF}
 a{color:#FFF}
-body,svg:not(:root){overflow:hidden}
+body,svg:not(:root){overflow:hiddenfont-size: 1px;font-size: 14px;
+}
 img,legend{border:0}
 legend,td,th{padding:0}
 html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
-body{margin:0;height:100vh;padding:20px;background-color:#eceff1;font-family:helvetica;letter-spacing:1px;font-size:1em;line-height:1.5em}
+body{margin:0;height:100vh;padding:0px;background-color:#eceff1;font-family:helvetica;letter-spacing:1px;font-size:1em;line-height:1.5em}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
 audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
 audio:not([controls]){display:none;height:0}
@@ -48,7 +49,6 @@ h1,h2{margin-top:0}
 }
 .pao-content .pao-section{margin-bottom:50px}
 .pao-content .fadein,.pao-content h1,.pao-content h2{-webkit-animation-duration:.5s;animation-duration:.5s;-webkit-animation-fill-mode:both;animation-fill-mode:both}
-.pao-content h1,.pao-content h2{-webkit-animation-name:fadein-drop;animation-name:fadein-drop;-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out}
 .pao-content h2{-webkit-animation-delay:.5s;animation-delay:.5s}
 .pao-content .fadein{-webkit-animation-name:fadein;animation-name:fadein;-webkit-animation-delay:0.5s;animation-delay:0.5s}
 @media screen and (max-height:600px){.pao-description{display:none}
