--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ h1, h2 {
     height: 100%;
     background-color: #fdfdff;
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: center;
     background-size: cover;
 }
 
