--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
    */
   
   h1 {
-    font-size: 2em;
+    font-size: 3em;
     margin: 0.67em 0;
   }
   
@@ -164,7 +164,7 @@
   textarea {
     font-family: inherit; /* 1 */
     font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
+    line-height: 2.15; /* 1 */
     margin: 0; /* 2 */
   }
   
@@ -384,11 +384,14 @@ a:hover {
     text-decoration: underline;
 }
 
-h1, h2 {
+h1 {
     margin-top: 0;
-    font-weight: 300;
+    font-weight: 400;
 }
-
+h2 {
+  margin-top: 0;
+  font-weight: 300;
+}
 
 .pao-wrapper {
     height: 100%;
