--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,7 @@ body {
     height: 100vh;
 
     color: #191620;
-    background-color: white;
+    background-color: #f7f5f0;
 
     font-family: Montserrat;
     font-size: .9em;
